WIP: improved some logic, fixed bugs adding cocoon interior.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -24,33 +24,25 @@ Graphics:
 
 
 Current tasks:
-    - Implement key logic for randomizer:
-        - Key doors are out of logic unless:
-            - State has keys >= total number of available locked doors
-            - This insures valid placement when there aren't branching locked paths behind locked doors.
-                - Maybe instead of this we need to simulate all choices?
-                    - This is computationally challenging if we allow placing items across all currently open dungeons.
-                - What about 100% chance to place key if dungeon checks left <= locks available and:
-                    - doors are out of logic if they aren't forced open yet.
-                        - A door is forced open if it is the only possible locked door available and a key is placed.
-                        - A door is forced open if all keys for the dungeon are placed.
-            - May want to revisit this for door randomization.
-    - Change odds of placing progress items to min(1 / checksLeft, progress / total) to avoid making progress items too likely early on.
+    - Dungeon 3: Cocoon
+        - Required puzzle: kill enemy in spirit world with rolling ball to get small key
+        - Required puzzle: Use astral projection to move pot out of the way to roll ball to get big key
+        Boss
+            - Astral projection of Tomb Guardian(material world) Tomb Guardian(spirit world)
+            - Tomb Guardian appears randomly in four quadrants, each has different puzzle for hitting
+            - Astral projection attacks you in the material world, if defeated it retreats to the guardian's position in the spirit world and regenerates.
+
+    - Randomizer improvements
+        - Forward fill progress items until  (remainingProgressItems / 2) checks are available.
+        - Add a goal
+    - Change level 1 invisibility to spirit barrier
+        - Like byrna, but drains spirit when taking damage or damaging enemies
+        - Charge adds element effect to barrier and reduces spirit loss to damage of that type
+        - Reduces mana regen, but does not drain it like invisibility
+        - Level 2 adds invisibility which allows you to pass through damage barriers entirely and ignore ground effects like ice
     - brainstorm some dungeon/boss ideas, maybe for Staff Tower
     - Do a regression test and release latest version.
 
-Randomizer logic improvements based on chatting:
-    - Switch to reverse fill:
-        Start with all items.
-        Choose an item to place.
-        Calculate all accessible locations without that item
-            - This involves simulating picking up all immediately accessible items and then iterating until no new locations are found.
-        Please the item in one of the accessible locations and repeat
-    - Fill items by category: Goal rewards, big keys, little keys, dungeon items, progress items, trash
-    - To calculate the number of keys to open a locked door:
-        - Count the number of locked doors that can be reached without unlocking the current door and add one to this value.
-            EG: There is a locked door with one locked door behind it and another locked door elsewhere with another locked door behind it. Then this door require 3 keys, as the two other locked doors can be reached without unlocking it, but the locked door behind it cannot be reached except by unlocking it.
-        - This should be done at the start of the algorithm once and assuming the player has all progress items.
 
 1 possible locked doors:
     out of logic until 1 key is possed.
@@ -67,7 +59,6 @@ High level list of things left to do:
         Forge
         Warship
     Areas missing significant content:
-        Cocoon
         Waterfall Temple
         River Temple
         Staff Tower
