--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -24,6 +24,9 @@ Graphics:
 
 
 Current tasks:
+    - Add new waterfall graphics
+    - Add updated tree graphics
+        - Add trees to the vanara village
     - Add dialogue objects that can trigger on entering areas or other triggers.
     - Change message rendering system to use the priority queue system to support nested messages.
     - Prevent the door from trapping you in the bow room if you don't have ranged attack.
