--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -27,6 +27,15 @@ Graphics:
 
 Current tasks:
     - Bug fixes
+        - Tree is showing up in middle of lava in crater, must have incorrect custom logic
+        - Clone tool bugs
+            - Mana regen is wrong when using clone tools (seems to multiply consumption/regen by number of clones)
+            - Should destroy clones when the clone technique is unequipped.
+            - Clones should all share the same tools (store tools on state instead of hero)
+            - Unable to charge weapon while clones are active, multiple clones don't attack at the same time
+            - Staff won't be placed when controlling multiple clones (one places, another retrieves?)
+                - Should probably just have the primary clone place the staff
+            - Check if multiple clones can charge weapon + fire bow
         - Picked up items are invisible while using cloak
         - Piercing projectiles that can push things should be stopped by the first object they push
             or not be able to push additional objects, for example, the charged chakram.
